@@ -38,7 +38,7 @@ import com.netflix.dyno.connectionpool.exception.DynoException;
  */
 public class RateTracker {
 
-    private final AtomicReference<BucketCreator> bucketCreateLock = new AtomicReference<BucketCreator>(null);
+    private final AtomicReference<BucketCreator> bucketCreateLock = new AtomicReference<>(null);
     private final AtomicInteger wonLock = new AtomicInteger(0);
 
     final RollingWindow rWindow;
@@ -114,11 +114,11 @@ public class RateTracker {
         return wonLock.get();
     }
 
-    class RollingWindow {
+    final class RollingWindow {
 
         private final int windowSize;
 
-        private final LinkedBlockingDeque<Bucket> queue = new LinkedBlockingDeque<Bucket>();
+        private final LinkedBlockingDeque<Bucket> queue = new LinkedBlockingDeque<>();
         private final AtomicInteger bucketCreateCount = new AtomicInteger(0);
 
         private RollingWindow(int wSize) {
@@ -148,7 +148,7 @@ public class RateTracker {
 
         private List<Bucket> getBuckets(int lookback) {
 
-            List<Bucket> list = new ArrayList<Bucket>();
+            List<Bucket> list = new ArrayList<>();
             int count = 0;
             Iterator<Bucket> iter = queue.iterator();
 
@@ -161,7 +161,7 @@ public class RateTracker {
 
         private List<Bucket> getAllBuckets() {
 
-            List<Bucket> list = new ArrayList<Bucket>();
+            List<Bucket> list = new ArrayList<>();
             Iterator<Bucket> iter = queue.iterator();
 
             while (iter.hasNext()) {
@@ -233,15 +233,21 @@ public class RateTracker {
         public int hashCode() {
             final int prime = 31;
             int result = 1;
-            result = prime * result + new Long(lastTimestamp.get()).intValue();
+            result = prime * result + Long.valueOf(lastTimestamp.get()).intValue();
             return result;
         }
 
         @Override
         public boolean equals(Object obj) {
-            if (this == obj) return true;
-            if (obj == null) return false;
-            if (getClass() != obj.getClass()) return false;
+            if (this == obj) {
+                return true;
+            }
+            if (obj == null) {
+                return false;
+            }
+            if (getClass() != obj.getClass()) {
+                return false;
+            }
 
             Bucket other = (Bucket) obj;
             return this.lastTimestamp.get() == other.lastTimestamp.get();
@@ -252,7 +258,7 @@ public class RateTracker {
         }
     }
 
-    private class BucketCreator {
+    private final class BucketCreator {
 
         private final String id = UUID.randomUUID().toString();
         private final long timestamp;
@@ -261,7 +267,7 @@ public class RateTracker {
         private BucketCreator(long time) {
             this.timestamp = time;
 
-            this.futureBucket = new FutureTask<Bucket>(new Callable<Bucket>() {
+            this.futureBucket = new FutureTask<>(new Callable<Bucket>() {
 
                 @Override
                 public Bucket call() throws Exception {
@@ -276,20 +282,26 @@ public class RateTracker {
         public int hashCode() {
             final int prime = 31;
             int result = 1;
-            result = prime * result + ((id == null) ? 0 : id.hashCode());
+            result = prime * result + (id == null ? 0 : id.hashCode());
             result = prime * result + (int) (timestamp ^ (timestamp >>> 32));
             return result;
         }
 
         @Override
         public boolean equals(Object obj) {
-            if (this == obj) return true;
-            if (obj == null) return false;
-            if (getClass() != obj.getClass()) return false;
+            if (this == obj) {
+                return true;
+            }
+            if (obj == null) {
+                return false;
+            }
+            if (getClass() != obj.getClass()) {
+                return false;
+            }
             BucketCreator other = (BucketCreator) obj;
             boolean equals = true;
-            equals &= (id != null) ? id.equals(other.id) : other.id == null;
-            equals &= (timestamp == other.timestamp);
+            equals &= id != null ? id.equals(other.id) : other.id == null;
+            equals &= timestamp == other.timestamp;
             return equals;
         }
 
